# swig-integration

./: CMakeLists.txt  README.txt
src/lib/: CMakeLists.txt  example.h
src/main/: CMakeLists.txt  main.cpp
src/swig/: CMakeLists.txt  example.i  pyexample.py
src/swig/python/: example-driver.py
swig/: CMakeLists.txt
